# podium

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: publish.yaml
src/podium/: __init__.py  describe.py
src/podium/converters/: __init__.py  _classes.py
src/podium/converters/dataframe/: _queries.py
src/podium/converters/field/: __init__.py  _queries.py  field.py
src/podium/dataframe/: config.py
src/podium/model/: __init__.py  model.py
src/podium/models/: __init__.py  field.py  model.py  schema.py
src/podium/validators/: __init__.py  _classes.py  _predicates.py
src/podium/validators/dataframe/: _predicates.py  dataframe.py
src/podium/validators/field/: __init__.py  _predicates.py  field.py
src/podium/validators/schema/: _predicates.py  schema.py
src/podium_lib/: __init__.py  dataframe.py  describe.py  testing.py  utils.py
src/podium_lib/converters/: __init__.py  _classes.py
src/podium_lib/converters/dataframe/: __init__.py  dataframe.py
src/podium_lib/dataframe/: context.py  dataframe.py
src/podium_lib/logging/: handler.py
src/podium_lib/model/: field.py  model.py
src/podium_lib/validators/: __init__.py  _classes.py
src/podium_lib/validators/dataframe/: __init__.py  dataframe.py
src/podium_lib/validators/field/: __init__.py
tests/: test_describe.py
tests/validators/: test_field_validator.py  test_validator.py
