[project]
name = "podium"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "lucas-nelson-uiuc", email = "lucas.nelson.contacts@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "narwhals>=1.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
